[gd_scene load_steps=2 format=3 uid="uid://cetx8q5qq7crx"]

[ext_resource type="Script" uid="uid://cvfqungh8iqcu" path="res://scripts/ui/level_select.gd" id="1_level"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_level")

[node name="BackgroundImage" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 1

[node name="SpaceshipsBackground" type="Control" parent="."]
z_index = -10
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SafeAreaMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="MainVBox" type="VBoxContainer" parent="SafeAreaMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TopBar" type="HBoxContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="SafeAreaMargin/MainVBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
text = "SELECT PLANET"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsPanel" type="HBoxContainer" parent="SafeAreaMargin/MainVBox/TopBar"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PowerPanel" type="PanelContainer" parent="SafeAreaMargin/MainVBox/TopBar/StatsPanel"]
layout_mode = 2

[node name="PowerLabel" type="Label" parent="SafeAreaMargin/MainVBox/TopBar/StatsPanel/PowerPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "PWR 100"

[node name="CurrencyPanel" type="PanelContainer" parent="SafeAreaMargin/MainVBox/TopBar/StatsPanel"]
layout_mode = 2

[node name="CurrencyLabel" type="Label" parent="SafeAreaMargin/MainVBox/TopBar/StatsPanel/CurrencyPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0 SC"

[node name="CarouselSection" type="VBoxContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="CarouselContainer" type="Control" parent="SafeAreaMargin/MainVBox/CarouselSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlanetInfoSection" type="VBoxContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PlanetNameLabel" type="Label" parent="SafeAreaMargin/MainVBox/PlanetInfoSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Mercury"
horizontal_alignment = 1

[node name="DifficultyLabel" type="Label" parent="SafeAreaMargin/MainVBox/PlanetInfoSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 22
text = "★☆☆☆"
horizontal_alignment = 1

[node name="PlanetDescLabel" type="Label" parent="SafeAreaMargin/MainVBox/PlanetInfoSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Fast and aggressive enemies"
horizontal_alignment = 1

[node name="RecommendedPowerLabel" type="Label" parent="SafeAreaMargin/MainVBox/PlanetInfoSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Recommended Power: 100"
horizontal_alignment = 1

[node name="ButtonSection" type="VBoxContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PlayButton" type="Button" parent="SafeAreaMargin/MainVBox/ButtonSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "PLAY"

[node name="SwipeHint" type="Label" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Swipe to change planet"
horizontal_alignment = 1

[node name="BottomNavBar" type="HBoxContainer" parent="SafeAreaMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HomeButton" type="Button" parent="SafeAreaMargin/MainVBox/BottomNavBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "HOME"

[node name="ShopButton" type="Button" parent="SafeAreaMargin/MainVBox/BottomNavBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "SHOP"

[node name="ProfileButton" type="Button" parent="SafeAreaMargin/MainVBox/BottomNavBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "PROFIL"
